tests/snapshots/parser_corpus__snapshot_examples@08-modules-app.i.snap
---
source: tests/parser_corpus.rs
expression: "format!(\"{}\", file)"
input_file: examples/08-modules-app.i
---
(file
  (module Main (expose-val main))
  (use Geometry (cherry Point distance))
  (use Std.IO (cherry print))
  (let main (block
    (let p1 (construct Point (kw x (int 0)) (kw y (int 0))))
    (let p2 (construct Point (kw x (int 3)) (kw y (int 4))))
    (call (! (var print)) (++ (str "distance: ") (call (var show) (paren (call (var distance) (var p1) (var p2)))))))))
